--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -5,7 +5,7 @@
     "Dashboard": "Pannello di controllo",
     "Calendar": "Calendario",
     "Chat": "Chiacchierare",
-    "Ecommerce": "ecommerce",
+    "Ecommerce": "Ecommerce",
     "Products": "Prodotti",
     "Product Detail": "Dettagli del prodotto",
     "Customers": "I clienti",
