Revert "commit to dev"
This reverts commit aef833ee0f563a74eb529a05b14039d0042c385b.

--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -5,7 +5,7 @@
     "Dashboard": "Pannello di controllo",
     "Calendar": "Calendario",
     "Chat": "Chiacchierare",
-    "Ecommerce": "Ecommerce",
+    "Ecommerce": "ecommerce",
     "Products": "Prodotti",
     "Product Detail": "Dettagli del prodotto",
     "Customers": "I clienti",
